# abstraktor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build.rs.deprecated  challenges.tex  demo-ejemplo.md  epas.txt  informe.tex  methodology.tex  metodologia-aplicada.tex  plan-actividades.tex  run.sh  sers.tex  slides-estructura.md  solucion-implementada.tex  solucion-propuesta.tex  trabajos-futuros.tex
.github/workflows/: coverage.yml  test.yml
SUT/dqlite/dqlite/: aclocal.m4  install.sh  libdqlite.la
SUT/dqlite/dqlite-raft/: install.sh
distributed-automata/: Cargo.toml
distributed-automata/data/: log_filtered.txt  transform.txt
distributed-automata/src/: main.rs
llvm/: .gitignore  Makefile  deps.sh
llvm/include/: types.h
llvm/src/: afl-llvm-pass.so.cc  afl-llvm-rt.o.c  targets_types.cc  targets_types.h
mallory/: README.md
mallory/docker/: README.md  Vagrantfile  docker-compose.yml
mallory/dqlite/: instr-targets.json
mallory/instrumentor/: instr-targets.txt  targets-summary.txt
mallory/jepsen/: config.edn
mallory/mediator/: Cargo.toml  Mediator.toml  Rocket.toml
src/: intrumentor.rs  logger.rs  main.rs
src/commands/: clean.rs  export_graphs.rs  get_targets.rs  instrument.rs  llvm.rs  mod.rs  run.rs  run_mallory.rs  run_mediator.rs  setup.rs
src/model/: event_graph.rs  instrumentor.rs  mod.rs
tests/: basic-e2e-test.md
tests/instrument_test/: Makefile  expected_targets.json  install.sh  main.c  math_utils.h  targets.json
tests/simple_fsm/: Makefile  install.sh  main.c
tests/sut_test/: README.md
(+143 files in other folders)
