[package]
name = "abstraktor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
cliclack = "0.3.6"
console = "0.15.11"
pathdiff = "0.2.3"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xshell = "0.2.7"
